--- a/DOM_creation/index.html
+++ b/DOM_creation/index.html
@@ -6,7 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    li{
+        display: flex;
+        align-items: center;
+        margin-top: 8px;
+    }
 
+    img{
+        border-radius: 15px;
+        margin-right: 5px;
+    }
+</style>
 <body>
     <h2>Apps</h2>
     
