folder structure,routes

--- a/portfolio/project/index.html
+++ b/portfolio/project/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<link rel="stylesheet" href="project.css">
+<link rel="stylesheet" href="/project/project.css">
 
 <body>
     <div class="header">
@@ -15,10 +15,10 @@
         </div>
         <div class="headList">
             <ul>
-                <li><a href="index.html"> Home</a></li>
-                <li> <a href="education.html">Education</a> </li>
-                <li> <a href="project.html">Project</a> </li>
-                <li><a href="contact.html">Contact us</a> </li>
+                <li><a href="/"> Home</a></li>
+                <li> <a href="../education">Education</a> </li>
+                <li> <a href="./project">Project</a> </li>
+                <li><a href="../contact">Contact us</a> </li>
             </ul>
         </div>
     </div>
@@ -28,7 +28,7 @@
 <div class="cards">
 
     <div class="card">
-        <img src="amazone.png" alt="Avatar" style="width:100%">
+        <img src="./assets/amazone.png" alt="Avatar" style="width:100%">
         <div class="container">
           <h4><b>Amazone clone</b></h4>
           <p>Tech Stack:<br>
@@ -39,7 +39,7 @@
       </div>
 
       <div class="card">
-        <img src="crypto.jpeg" alt="Avatar" style="width:100%">
+        <img src="./assets/crypto.jpeg" alt="Avatar" style="width:100%">
         <div class="container">
           <h4><b>Crypto verse</b></h4>
           <p>Tech Stack:<br>
@@ -50,7 +50,7 @@
       </div>
 
       <div class="card">
-        <img src="analysis.png" alt="Avatar" style="width:100%">
+        <img src="./assets/analysis.png" alt="Avatar" style="width:100%">
         <div class="container">
           <h4><b>Olympic Data <A>nalysis</A></b></h4>
           <p>Tech Stack:<br>
@@ -64,7 +64,7 @@
 
     <div class="cards2">
         <div class="card">
-            <img src="netflix.png" alt="Avatar" style="width:100%;height: 200px;">
+            <img src="./assets/netflix.png" alt="Avatar" style="width:100%;height: 200px;">
             <div class="container">
               <h4><b>Netflix clone</b></h4>
               <p>Tech Stack:<br>
@@ -75,7 +75,7 @@
           </div>
     
           <div class="card">
-            <img src="voice.jpeg" alt="Avatar" style="width:100%">
+            <img src="./assets/voice.jpeg" alt="Avatar" style="width:100%">
             <div class="container">
               <h4><b>Voice Assistance</b></h4>
               <p>Tech Stack:<br>
