navbar center, education loading fixed

--- a/html-css/portfolio/contact/index.html
+++ b/html-css/portfolio/contact/index.html
@@ -36,19 +36,19 @@
     <div class="container">
       <form>
         <label for="name">NAME :</label>
-        <input id="name" class="nameInp" type="text" />
+        <input id="name" class="nameInput" type="text" />
 
         <label for="email">Email :</label>
-        <input id="email" class="emailInp" type="email" />
+        <input id="email" class="emailInput" type="email" />
 
         <label for="number">Ph number :</label>
-        <input id="number" class="numInp" type="number" />
+        <input id="number" class="numInput" type="number" />
 
         <label for="msg">Message :</label>
 
         <textarea id="msg" rows="4" cols="20"></textarea>
 
-        <input class="inp" type="submit" value="submit" />
+        <input class="submitBtn" type="submit" value="Submit" />
       </form>
     </div>
   </body>
