--- a/html-css/portfolio/index.html
+++ b/html-css/portfolio/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="headList">
         <ul>
-          <li class="routes"><a href="/"> Home</a></li>
+          <li class="routes"><a href="/">Home</a></li>
           <li class="routes">
             <a href="./education">Education</a>
           </li>
@@ -48,10 +48,10 @@
         <label for="react">React.js</label>
         <progress class="progress" id="react" value="25" max="50"></progress>
 
-        <label for="java">Java:</label>
+        <label for="java">Java</label>
         <progress class="progress" id="java" value="33" max="50"></progress>
 
-        <label for="python">Python:</label>
+        <label for="python">Python</label>
         <progress class="progress" for="python" value="30" max="50"></progress>
       </div>
     </div>
