--- a/html-css/portfolio/project/index.html
+++ b/html-css/portfolio/project/index.html
@@ -15,10 +15,10 @@
         </div>
         <div class="headList">
             <ul>
-                <li><a href="/"> Home</a></li>
-                <li> <a href="../education">Education</a> </li>
-                <li> <a href="./project">Project</a> </li>
-                <li><a href="../contact">Contact us</a> </li>
+                <li class="routes"><a href="/"> Home</a></li>
+                <li class="routes"> <a href="../education">Education</a> </li>
+                <li class="routes"> <a href="./project">Project</a> </li>
+                <li class="routes"><a href="../contact">Contact us</a> </li>
             </ul>
         </div>
     </div>
@@ -26,7 +26,6 @@
 ;">PROJECTS</h2>
 
 <div class="cards">
-
     <div class="card">
         <img src="./assets/amazone.png" alt="Avatar" style="width:100%">
         <div class="container">
