--- a/html-css/portfolio/education/index.html
+++ b/html-css/portfolio/education/index.html
@@ -15,10 +15,10 @@
       </div>
       <div class="headList">
         <ul>
-          <li><a href="/"> Home</a></li>
-          <li><a href="./education">Education</a></li>
-          <li><a href="../project">Project</a></li>
-          <li><a href="../contact">Contact us</a></li>
+          <li class="routes"><a href="/"> Home</a></li>
+          <li class="routes"><a href="./education">Education</a></li>
+          <li class="routes"><a href="../project">Project</a></li>
+          <li class="routes"><a href="../contact">Contact us</a></li>
         </ul>
       </div>
     </div>
