navbar center, education loading fixed

--- a/html-css/portfolio/contact/index.html
+++ b/html-css/portfolio/contact/index.html
@@ -29,9 +29,7 @@
         </ul>
       </div>
     </div>
-    <h2 style="text-align: center; border-bottom: 1px solid black">
-      CONTACT US
-    </h2>
+    <h2 style="text-align: center">CONTACT US</h2>
 
     <div class="container">
       <form>
