--- a/html-css/portfolio/education/index.html
+++ b/html-css/portfolio/education/index.html
@@ -24,27 +24,27 @@
     </div>
 
     <div class="grad">
-      <img src="./assets/grad.png" />
-      <h1>Education</h1>
+      <img src="./education/assets/grad.png" />
+      <h2>Education</h2>
     </div>
 
     <div class="edu">
       <div class="edu1">
-        <img src="./assets/arrow.png" />
+        <img src="./education/assets/arrow.png" />
         <div class="ms">
           <h2 class="h2">Master of Computer Application</h2>
           <p>Dayananda sagar college of Engineering, 2021-2023</p>
         </div>
       </div>
       <div class="edu1">
-        <img src="./assets/arrow.png" />
+        <img src="./education/assets/arrow.png" />
         <div>
           <h2 class="h2">Bachalors of Computer Application</h2>
           <p>Brainware University, 2018-2021</p>
         </div>
       </div>
       <div class="edu1">
-        <img src="./assets/arrow.png" />
+        <img src="./education/assets/arrow.png" />
         <div class="HS">
           <h2 class="h2">High School</h2>
           <p>Army Public School Tibri, 2017-2018</p>
