--- a/html-css/portfolio/project/index.html
+++ b/html-css/portfolio/project/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li class="routes"><a href="/"> Home</a></li>
                 <li class="routes"> <a href="../education">Education</a> </li>
-                <li class="routes"> <a href="./project">Project</a> </li>
+                <li class="routes"> <a href="./">Project</a> </li>
                 <li class="routes"><a href="../contact">Contact us</a> </li>
             </ul>
         </div>
