--- a/JS/calendar/calendar.html
+++ b/JS/calendar/calendar.html
@@ -10,8 +10,8 @@
 
   <body>
     <div class="head">
-      <button onclick="prevMonth()"><</button>
-      <button onclick="nextMonth()">></button>
+      <button onclick="changeMonth(-1)"><</button>
+      <button onclick="changeMonth(+1)">></button>
       <h2 id="currDate"></h2>
     </div>
 
